43. New un-qualified-for Skill: Flee -- just calls the Flee command, but can be used as a replacement of the command if set up properly.
44. New un-qualified-for Common Skill: ScrollScribing -- inferior to the scribe skill, but ties into metacrafting!
45. Random object generator done.  See HELP GENERATE, and play around with it.  Let me know if this is interesting in any way.
46. EXPORT command now supports single players by name.
47. * I changed the name of a few of the library interfaces, so make sure you follow the 
	part of the upgrade instructions regarding deleting your old "com" directory before 
	running the new build.
48. CoffeeMud-bug values dropped 700 points in overnight debugging.
# Build 5.5.5 Release ?
1. New INI entries: DEFAULTPLAYERFLAGS, FORMULA_* for combat formulas
2. New DISABLE flags: AUTODISEASE, WEATHER, WEATHERNOTIFIES, WEATHERCHANGES
3. Character classes, and mob stats have been rebalanced along pre-3.0 lines.  
   Thieves and Fighters are most altered classes.  
   Mobs are an average of players now.
   Combat Fudge Factors are more strict, effective, and rational.
   Bonuses from stats are capped by the players current Max Stat value.  Period.
   Use RESET MOBSTATS WORLD command to pull your mobs into compliance.  This will, as a side affect, reset all area content to db baseline. 
4. CoffeeMud now supports critical hits for spells and physical damage: high int supports former, and high dex the later.
5. New Zappermask: +BASECLASS
6. New DEBUG flag: HTTPACCESS, SMTPCLIENT
7. SMTPSERVERNAME ini entry expanded to allow SMTP auth support.
8. Siplet now supports multiple windows.
9. Players can now get HELP on deities by name.
10.Rhino (Javascript library) upgraded to 1.7R2
11.Several new Oracle Prayers added for sensing the skills of others
12.Behaviors ItemRefitter,ItemMender,ItemIdentifier have COST parameter now.
13.New DISABLE flag: EQUIPSIZE
14.WEAR command now supports specified wear locations.