@@ -263,12 +263,18 @@ which your mud does not subscribe to.
 RESET_ROOM=RESET
 RESET_AREA=RESET
 RESET_REJUV=RESET
+RESET_MOBSTATS=RESET
+RESET_ITEMSTATS=RESET
 RESET=\
 Command  : RESET\n\r\
 Usage    : RESET (REJUV) ROOM/AREA (ITEMS/MOBS)\n\r\
+Usage    : RESET MOBSTATS ROOM/AREA/WORLD/CATALOG (NOSAVE) ([AREANAME])\n\r\
+Usage    : RESET ITEMSTATS ROOM/AREA/WORLD/CATALOG (NOSAVE) ([AREANAME])\n\r\
 Example  : reset room\n\r\
 Example  : reset area\n\r\
 Example  : reset rejuv area items\n\r\
+Example  : reset mobstats world\n\r\
+Example  : reset itemstats catalog nosave midgaard\n\r\
 Short(s) : \n\r\
 The reset room or area command will revive any wandered or \
 dead mobs whose location is the same as the invokers.  Any \
@@ -279,7 +285,18 @@ their proper homes.\n\r\
 The reset rejuv room or area command will revive any dead mobs or \
 resettable items at the location of the invoker.  Mobs that have \
 wandered away will not be returned.  No other mobs or items in the \
-room will be affected.  
+room will be affected.\n\r\
+\n\r\  
+The reset itemstats and reset mobstats commands serve a similar \
+purpose.  Both will modify the vital statistics of all the mobs \
+or items in the room, area, world, or catalog specified.  The \
+statistics will be "normalizations" of vital combat scores based \
+on the mob or items level, and the game engine's definition of \
+nominal ratings for that level.  They will \
+allow a "preview" of changes to be made by specifying the "nosave" \
+parameter on the command line, which prevents permanent changes.  \
+Area names may also be specified on the command line to cause the \
+command to skip certain areas (for use with WORLD parameter only).
 
 LIST=\
 Command : LIST\n\r\
