@@ -2191,12 +2191,14 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 # Build 5.5.5 Release ?
 1. New INI entries: DEFAULTPLAYERFLAGS, FORMULA_* for combat formulas
 2. New DISABLE flags: AUTODISEASE, WEATHER, WEATHERNOTIFIES, WEATHERCHANGES
+3. RESET MOBSTATS and RESET ITEMSTATS have been documented for normalizing combat stats
 3. Character classes, and mob stats have been rebalanced along pre-3.0 lines.  
    Thieves and Fighters are most altered classes.  
    Mobs are an average of players now.
    Combat Fudge Factors are more strict, effective, and rational.
    Bonuses from stats are capped by the players current Max Stat value.  Period.
-   Use RESET MOBSTATS WORLD command to pull your mobs into compliance.  This will, as a side affect, reset all area content to db baseline. 
+   Use RESET MOBSTATS WORLD command to pull your mobs into compliance.  
+     This will, as a side affect, reset all area content to db baseline. 
 4. CoffeeMud now supports critical hits for spells and physical damage: high int supports former, and high dex the later.
 5. New Zappermask: +BASECLASS
 6. New DEBUG flag: HTTPACCESS, SMTPCLIENT
